--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -1,3 +1,70 @@
 <app-menu></app-menu>
-<p>contato works!</p>
+<div class="container mt-5">
+  <app-breadcrumb></app-breadcrumb>
+  <div class="contatoSection">
+    <div class="row">
+        <h1 class="contatoTitle">Quer mais detalhes?<span> Fale conosco.</span></h1>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <p class="contatoSubtitle">
+          Entre em contato e saiba mais sobre os serviços  que podem transformar seu negócio. Estamos disponíveis para tirar todas as suas dúvidas de segunda a sexta, das 08h às 18h.</p>
+        <p class="contatoSubtitle align-items-center">
+          <img src="../../../assets/images/contato_email.png" alt="Email Sennatech" class="imgContato">
+          contato@sennatech.com.br</p>
+        <p class="contatoSubtitle align-items-center">
+          <img src="../../../assets/images/contato_whatsapp.png" alt="WhatsApp Sennatech" class="imgContato">
+          +55 (11) 2386-9707 </p>
+        <p class="contatoSubtitle">
+          <img src="../../../assets/images/contato_local.png" alt="Endereço Sennatech" class="imgContato">
+          Av. Engenheiro Luis Carlos Berini, 1748
+          <br/>
+          5º Andar, Conjunto 502-504
+          <br/>
+          CEP 04551-010
+          <br/>
+          Cidade Manções
+          <br/>
+          São Paulo - SP
+        </p>
+      </div>
+      <div class="col-lg-6">
+        <form>
+          <div class="row">
+            <div class="col-12 col-lg-6">
+              <label for="firstName" class="form-label textLabel">Primeiro Nome*</label>
+              <input type="text" class="form-control" placeholder="" name="email">
+            </div>
+            <div class="col-12 col-lg-6">
+              <label for="secondName" class="form-label textLabel">Segundo Nome*</label>
+              <input type="text" class="form-control" placeholder="" name="email">
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-12 col-lg-12">
+              <label for="email" class="form-label textLabel">Email*</label>
+              <input type="email" class="form-control" id="email" placeholder="" name="email">
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-12 col-lg-12">
+              <label for="FormControlTextarea1" class="form-label textLabel">Mensagem</label>
+              <textarea class="form-control" id="FormControlTextarea1" rows="5"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="btnDiv my-3">
+              <button class="btnLight" type="submit">
+                <p class="btnText">Enviar</p>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="mapsLocalization">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1828.130833419071!2d-46.68717994332973!3d-23.59494683669946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1spt-BR!2sbr!4v1681351760697!5m2!1spt-BR!2sbr" width="1232" height="370" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+  </div>
+</div>
 <app-footer></app-footer>
