--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,10 +1,8 @@
 <app-menu></app-menu>
 
-<div class="container">
+<div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
   <div class="sobreSection">
-
-
     <div class="row">
       <div class="col-lg-6 col-xs-12">
         <h1 class="sobreTitle">Somos parceiros das <span>melhores soluções digitais.</span></h1>
