--- a/src/app/pages/parceiros/parceiros.component.html
+++ b/src/app/pages/parceiros/parceiros.component.html
@@ -1,6 +1,8 @@
 <app-menu></app-menu>
 
-<div class="container">
+<div class="container mt-5">
+  <app-breadcrumb></app-breadcrumb>
+
   <h3 class="parceiros__title">Curadoria de <span>parceiros
     <br/>
     reconhecidos.</span>
