Ajuste Menu e Search

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -29,7 +29,7 @@
       </li>
     </ul>
   </div>
-  <div class="menu__search justify-content-end">
+  <div class="menu__search justify-content-center">
     <app-search></app-search>
   </div>
 </nav>
