--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -135,4 +135,67 @@
 <!-- /PARCEIROS -->
 
 
+<div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-4 ms-auto">
+            <img src="../../../assets/images/solace.png" alt="Solace Brand" class="">
+          </div>
+          <div class="col-4 me-auto">
+            <p class="parceirosTxt">
+              <span class="bold">Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA)</span>
+              em ambientes de nuvem híbrida, multinuvem e IoT.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-4 ms-auto">
+            <img src="../../../assets/images/solvo.png" alt="Solvo Brand" class="">
+          </div>
+          <div class="col-4 me-auto">
+            <p class="parceirosTxt">
+              <span class="bold">Descubram, priorizem, mitiguem e corrijam automaticamente os riscos </span>
+              de acesso à infraestrutura de nuvem.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-4 ms-auto">
+            <img src="../../../assets/images/wib.png" alt="Wib Brand" class="">
+          </div>
+          <div class="col-4 me-auto">
+            <p class="parceirosTxt">
+              <span class="bold">A Wib API oferece visibilidade contínua em todo o ciclo de vida da API</span>
+              , desde o código até o teste e a produção.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 <app-footer></app-footer>
