--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -33,9 +33,7 @@
   }
   &__search{
     width: 33%;
-    text-align: center;
-    // flex: 10;
-    // text-align: center;
+    display: flex;
   }
 }
 
