--- a/src/app/components/shared/carousel/carousel.component.scss
+++ b/src/app/components/shared/carousel/carousel.component.scss
@@ -15,7 +15,7 @@
     display: inline-block;
     width: 10px;
     height: 10px;
-    margin: 1px 20px 1px 20px;
+    margin: 1px 5px 1px 5px;
     text-indent: -999px;
     cursor: pointer;
     background-color: rgba(0,0,0,0);
@@ -25,7 +25,47 @@
 .carousel-indicators .active {
   width: 50px;
   height: 10px;
-  margin: 1px 20px 1px 20px;
+  margin: 1px 5px 1px 5px;
   background-color: #fff;
 }
 
+.carousel-indicators{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-right: 15%;
+  margin-bottom: 2rem;
+  margin-left: 15%;
+  list-style: none;
+}
+
+.carousel-control-prev {
+  left: 45%;
+}
+
+.carousel-control-next {
+  right: 45%;
+}
+
+.carousel-control-prev, .carousel-control-next {
+  position: absolute;
+  top: 95%;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  width: 1%;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  background: none;
+  border: 0;
+  opacity: 0.5;
+  transition: opacity 0.15s ease;
+  height: 25px;
+}
