--- a/src/app/components/shared/search/search.component.scss
+++ b/src/app/components/shared/search/search.component.scss
@@ -1,5 +1,9 @@
 .searchIcon{
   color: white;
+  &:hover{
+    color: #6AF4FF;
+    transition: 0.4s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  }
 }
 
 #collapseWidthExample{
@@ -16,3 +20,13 @@
 #collapseWidthExample.in {
   width: 220px;
 }
+
+.searchDisplay{
+  display: none;
+}
+
+
+.show-results {
+  display: block;
+}
+
