Teste HomePage Carousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -133,7 +133,7 @@
   </div>
 </div>
 <!-- /PARCEIROS -->
-
+<!-- CAROUSEL PARCEIROS TESTE -->
 
 <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -197,5 +197,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!-- /CAROUSEL PARCEIROS TESTE -->
+
 
 <app-footer></app-footer>
