feat: adiciona lib ngx-owl-carousel e novo componente de carousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -135,7 +135,7 @@
 <!-- /PARCEIROS -->
 <!-- CAROUSEL PARCEIROS TESTE -->
 
-<div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+<!-- <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -196,8 +196,8 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
+</div> -->
 <!-- /CAROUSEL PARCEIROS TESTE -->
-
+<app-carouselTest></app-carouselTest>
 
 <app-footer></app-footer>
