Criacao do Componente auxiliar Cases e Carreira

--- a/src/app/pages/carreira/carreira.component.html
+++ b/src/app/pages/carreira/carreira.component.html
@@ -1,3 +1,140 @@
 <app-menu></app-menu>
-<p>carreira works!</p>
+<div class="container mt-5">
+  <app-breadcrumb></app-breadcrumb>
+
+  <h3 class="carreira__title">Vamos nos conectar?
+    <br/>
+    <span>Faça parte do nosso time.</span>
+  </h3>
+  <div class="row mb-3">
+    <div class="filter">
+      <p>Mais recentes  <span>|  Mais Relevantes</span></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-xs-12">
+      <div class="cards">
+        <div class="card cardCarreira">
+          <div class="card-body">
+            <p class="card-location">Brasil - Remoto</p>
+            <h3 class="card-title">Front End CSS Developer</h3>
+            <a href="/vaga" class="card-link">
+              <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class=" mb-5">
+    <app-pagination></app-pagination>
+  </div>
+
+  <h5 class="carreira__subTitle mt-5 mb-5">Não achou  o que procurava?
+    <br/>
+    <span>Inscreva-se no <a href="#">banco de talentos</a>.</span>
+  </h5>
+
+</div>
 <app-footer></app-footer>
