--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -1,4 +1,93 @@
 <app-menu></app-menu>
-<p>cases works!</p>
-<app-breadcrumb></app-breadcrumb>
+<div class="container mt-5">
+  <app-breadcrumb></app-breadcrumb>
+  <h3 class="cases__title">Clientes que afirmam
+    <br/>
+    <span>nossa experiência.</span>
+  </h3>
+  <div class="row mb-3">
+    <div class="filter">
+      <p>Mais recentes  <span>|  Mais Relevantes</span></p>
+    </div>
+  </div>
+  <div class="row mb-5 ">
+    <div class="col-6">
+      <img src="../../../assets/images/img_Nubank.png" alt="Case Nubank">
+    </div>
+    <div class="col-6">
+      <div class="case__Partner">
+        <p class="">2023 <span>|</span> Tecnologia Parceira: Solvo</p>
+      </div>
+      <div class="case__Title">
+        <p class="">Case de Sucesso da Nubank</p>
+      </div>
+      <div class="case__Text">
+        <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
+      </div>
+      <div class="case__Link">
+        <a href="/case"><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-5 mt-5">
+    <div class="col-6">
+      <img src="../../../assets/images/img_Vivo.png" alt="Case Vivo">
+    </div>
+    <div class="col-6">
+      <div class="case__Partner">
+        <p class="">2023 <span>|</span> Tecnologia Parceira: Wib</p>
+      </div>
+      <div class="case__Title">
+        <p class="">Case de Sucesso da Vivo</p>
+      </div>
+      <div class="case__Text">
+        <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
+      </div>
+      <div class="case__Link">
+        <a href=""><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-5 mt-5">
+    <div class="col-6">
+      <img src="../../../assets/images/img_Ifood.png" alt="Case Ifood">
+    </div>
+    <div class="col-6">
+      <div class="case__Partner">
+        <p class="">2023 <span>|</span> Tecnologia Parceira: Wib</p>
+      </div>
+      <div class="case__Title">
+        <p class="">Case de Sucesso do Ifood</p>
+      </div>
+      <div class="case__Text">
+        <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
+      </div>
+      <div class="case__Link">
+        <a href=""><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+      </div>
+    </div>
+  </div>
+  <div class="row mb-5 mt-5">
+    <div class="col-6">
+      <img src="../../../assets/images/img_Alelo.png" alt="Case Alelo">
+    </div>
+    <div class="col-6">
+      <div class="case__Partner">
+        <p class="">2023 <span>|</span> Tecnologia Parceira: Solvo</p>
+      </div>
+      <div class="case__Title">
+        <p class="">Case de Sucesso da Alelo</p>
+      </div>
+      <div class="case__Text">
+        <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
+      </div>
+      <div class="case__Link">
+        <a href=""><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+      </div>
+    </div>
+  </div>
+  <div class="mb-5 mt-5">
+    <app-pagination></app-pagination>
+  </div>
+</div>
 <app-footer></app-footer>
