--- a/src/app/pages/servicos/servicos.component.html
+++ b/src/app/pages/servicos/servicos.component.html
@@ -99,8 +99,8 @@
       </div>
     </div>
   </div>
-
-  <app-pagination></app-pagination>
-
+  <div class="mb-5">
+    <app-pagination></app-pagination>
+  </div>
 </div>
 <app-footer></app-footer>
