--- a/src/app/components/shared/carouselTest/carouselTest.component.html
+++ b/src/app/components/shared/carouselTest/carouselTest.component.html
@@ -1,6 +1,6 @@
 <owl-carousel-o [options]="carouselOptions">
     <ng-container *ngFor="let item of items">
-      <div>
+      <ng-template>
         <div class="col-md-4">
           <div class="row">
             <div class="col-4 ms-auto">
@@ -14,6 +14,6 @@
             </div>
           </div>
         </div>
-      </div>
+      </ng-template>
     </ng-container>
   </owl-carousel-o>
