--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -198,6 +198,28 @@
   </button>
 </div> -->
 <!-- /CAROUSEL PARCEIROS TESTE -->
-<app-carouselTest></app-carouselTest>
+<app-carouselTest [items]="[  
+{ 
+  imgUrl: '../../../../assets/images/solace.png',
+  altText: 'Solace Brand',
+  title: 'Projetar, implantar e gerenciar arquitetura orientada a eventos (EDA)',
+  text: 'em ambientes de nuvem híbrida, multinuvem e IoT.'
+
+},  
+{ 
+  imgUrl: '../../../../assets/images/solvo.png',
+  altText: 'Solvo Brand',
+  title: 'Descubram, priorizem, mitiguem e corrijam automaticamente os riscos',
+  text: 'de acesso à infraestrutura de nuvem.'  
+},  
+{ 
+  imgUrl: '../../../../assets/images/wib.png',
+  altText: 'Wib Brand',
+  title: 'A Wib API oferece visibilidade contínua em todo o ciclo de vida da API',
+  text: 'desde o código até o teste e a produção.'
+}
+]"></app-carouselTest>
+
+
 
 <app-footer></app-footer>
