fix: ajusta rotas vagas e case

--- a/src/app/pages/carreira/carreira.component.html
+++ b/src/app/pages/carreira/carreira.component.html
@@ -1,6 +1,7 @@
 <app-menu></app-menu>
 <div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
+  <!-- <router-outlet></router-outlet> -->
 
   <h3 class="carreira__title">Vamos nos conectar?
     <br/>
@@ -18,7 +19,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -32,7 +33,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -46,7 +47,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -60,7 +61,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -76,7 +77,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -90,7 +91,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -104,7 +105,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
@@ -118,7 +119,7 @@
           <div class="card-body">
             <p class="card-location">Brasil - Remoto</p>
             <h3 class="card-title">Front End CSS Developer</h3>
-            <a href="/vaga" class="card-link">
+            <a routerLink="./vaga" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
