--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -1,6 +1,7 @@
 <app-menu></app-menu>
 <div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
+  <!-- <router-outlet></router-outlet> -->
   <h3 class="cases__title">Clientes que afirmam
     <br/>
     <span>nossa experiência.</span>
@@ -25,7 +26,7 @@
         <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
       </div>
       <div class="case__Link">
-        <a href="/case"><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+        <a routerLink="./case"><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
       </div>
     </div>
   </div>
@@ -44,7 +45,7 @@
         <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
       </div>
       <div class="case__Link">
-        <a href=""><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+        <a routerLink="./case"><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
       </div>
     </div>
   </div>
@@ -63,7 +64,7 @@
         <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
       </div>
       <div class="case__Link">
-        <a href=""><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+        <a routerLink="./case"><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
       </div>
     </div>
   </div>
@@ -82,7 +83,7 @@
         <p class="">Descritivo parcialmente detalhado sobre o case. Exibir problema, parceiro e solução implementada.</p>
       </div>
       <div class="case__Link">
-        <a href=""><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
+        <a routerLink="./case"><p class="">Ler Case Completo <i class="bi bi-arrow-up-right"></i></p></a>
       </div>
     </div>
   </div>
