fix: ajusta lib owl-carousel

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
