--- a/src/app/components/shared/carouselTest/carouselTest.component.html
+++ b/src/app/components/shared/carouselTest/carouselTest.component.html
@@ -1,19 +1,19 @@
 <owl-carousel-o [options]="carouselOptions">
-    <ng-container *ngFor="let item of items">
-      <ng-template>
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-4 ms-auto">
-              <img [src]="item.imgUrl" alt="{{item.altText}}" class="">
-            </div>
-            <div class="col-4 me-auto">
-              <p class="parceirosTxt">
-                <span class="bold">{{item.title}}</span>
-                {{item.text}}
-              </p>
-            </div>
+  <ng-container *ngFor="let item of items">
+    <ng-template carouselSlide [id]="item.id">
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-4 ms-auto">
+            <img [src]="item.imgUrl" alt="{{item.altText}}" class="">
+          </div>
+          <div class="col-4 me-auto">
+            <p class="parceirosTxt">
+              <span class="bold">{{item.title}}</span>
+              {{item.text}}
+            </p>
           </div>
         </div>
-      </ng-template>
-    </ng-container>
-  </owl-carousel-o>
+      </div>
+    </ng-template>
+  </ng-container>
+</owl-carousel-o>
