Ajustes antes da Apresentacao (Mobile/Carousel)

--- a/src/app/pages/carreira/carreira.component.html
+++ b/src/app/pages/carreira/carreira.component.html
@@ -8,7 +8,7 @@
     <span>Faça parte do nosso time.</span>
   </h3>
   <div class="row mb-3">
-    <div class="filter">
+    <div class="carreira__filter">
       <p>Mais recentes  <span>|  Mais Relevantes</span></p>
     </div>
   </div>
