--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -3,7 +3,10 @@
   <app-breadcrumb></app-breadcrumb>
   <div class="contatoSection">
     <div class="row">
-        <h1 class="contatoTitle">Quer mais detalhes?<span> Fale conosco.</span></h1>
+        <h1 class="contatoTitle">Quer mais detalhes?
+          <br>
+          <span> Fale conosco.</span>
+        </h1>
     </div>
     <div class="row">
       <div class="col-lg-6">
