--- a/src/app/pages/vaga/vaga.component.html
+++ b/src/app/pages/vaga/vaga.component.html
@@ -1,95 +1,121 @@
 <app-menu></app-menu>
 <div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
-  <div class="col-7">
-    <h3 class="case__title">Clientes que afirmam
-      <br/>
-      <span>nossa experiência.</span>
-    </h3>
-    <div class="partner">
-      <p>2023 | Tecnologia Parceira: Solvo</p>
-    </div>
-    <div class="caseArticle">
+  <div class="row">
+    <div class="col-lg-9 col-xs-12">
+      <div class="vaga">
+        <h3 class="vaga__Title">Front End CSS
+          <br/>
+          <span>Developer</span>
+        </h3>
+        <div class="vaga__Partner mt-3">
+          <p class="card-partner">Brasil - Remoto | Job No. R00139150</p>
+        </div>
+        <div class="vaga__Article mt-3">
+          <p class="vaga__Subtitle mt-4">Descrição da Vaga</p>
+          <div class="vaga__Text">
+            <p class="mb-3">
+              <li>Documentar, otimizar e manter especificações, componentes, código-fonte, módulos e recursos das funcionalidades desenvolvidas.</li>
+              <li>Code Review dos integrantes da squad.</li>
+              <li>Desenvolver e manter soluções arquiteturais para os aplicativos desenvolvidos pela empresa.</li>
+              <li>Interagir com outros times, propor melhores práticas e auxiliar em manter a estrutura base atualizada.</li>
+              <li>Sempre primar pelas metodologias ágeis, mantendo as demandas organizadas e clarificadas.</li>
+              <li>Pair programming e códigos colaborativos.</li>
+              <li>Participar de reuniões refinamentos técnicos para definições de prazos e entregas.</li>
+              <li>Propor melhorias e novas arquiteturas para nossas aplicações.</li>
+              <li>Desenvolver as aplicações (programar).</li>
+            </p>
 
-      <p class="caseSubtitle">Sobre o Nubank</p>
+            <p class="vaga__Subtitle mt-4">Qualificações</p>
+            <p class="mb-3">
+              <li>ViewCode;</li>
+              <li>APIs RESTful;</li>
+              <li>Cocoapods;</li>
+              <li>XCTests;</li>
+              <li>Clean Architecture, SOLID e Server Driven UI.</li>
+            </p>
+            <p class="vaga__Subtitle mt-4">Diferenciais</p>
+            <p class="mb-3">
+              <li>Conhecimento em desenvolvimento Objective-C;</li>
+              <li>Conhecimento em guidelines da plataforma;</li>
+              <li>Conhecimento em Google Analytics;</li>
+              <li>Conhecimento em Firebase Toolkit.</li>
+              <li>Conhecimento do mecanismo de in-app purchase;</li>
+              <li>Conhecimento do processo de publicação de aplicativos na AppleStore.</li>
+            </p>
+            <p class="vaga__Subtitle mt-4">Benefícios</p>
+            <p class="mb-3">
+              <li>Seguro de Vida, Plano de Saúde Nacional e Plano Odontológico;</li>
+              <li>Gympass ou TotalPass;</li>
+              <li>Parcerias para desconto e reembolso em cursos, treinamentos e certificações;</li>
+              <li>Auxílio reembolso para creches, babás, berçários. Licença Maternidade e Paternidade Estendidas;</li>
+              <li>Auxílio alimentação (VA e VR) e vale transporte;</li>
+              <li>Auxílio home office.</li>
+            </p>
+          </div>
+        </div>
+        <div class="vaga__socialMedia mt-5 mb-5">
+          <span class="me-5 itens">Compartilhar</span>
+          <a href="" class="me-5 text-reset">
+            <i class="bi bi-linkedin fs-7"></i>
+          </a>
+          <a href="" class="me-5 text-reset">
+            <i class="bi bi-instagram fs-7"></i>
+          </a>
+          <a href="" class="me-5 text-reset">
+            <i class="bi bi-facebook fs-7"></i>
+          </a>
+          <a href="" class="me-4 text-reset">
+            <i class="bi bi-whatsapp fs-7"></i>
+          </a>
+        </div>
+        <button class="btnLight ms-5" type="submit">
+          <p class="btnText">Inscrever-se</p>
+        </button>
+        <div class="row">
+          <div class="btnDiv my-3">
 
-      <div class="imgCase">
-        <img src="" alt="">
+          </div>
+        </div>
       </div>
-
-      <div class="caseText">
-        <p>Fundado em 2013, o Nubank foi pensado para redefinir a relação das pessoas com o dinheiro e com as instituições financeiras, através de uma experiência livre de complexidade e de burocracias. A instituição desenvolve soluções simples, seguras e 100% digitais para garantir aos clientes total controle sobre suas finanças. Também através da tecnologia, assegura eficiência no atendimento ao cliente.
-        <br>
-        A empresa surgiu sob a proposta de levar aos clientes acesso a serviços financeiros transparentes e justos, e é o que tem feito desde a sua criação. Com investimentos contínuos em inovação, o Nubank administra hoje mais de 7 milhões de cartões de crédito e gerencia mais de 5 milhões de contas correntes digitais, números que lhe garantem o status de maior banco digital do mundo, fora da Ásia.
-        </p>
-
-        <p class="caseSubtitle">Desafio</p>
-
-        <p>O Nubank surgiu com a proposta de simplificar os serviços financeiros e empoderar os clientes no Brasil, colocando-os no controle de suas próprias finanças. Por questões de compliance, em 2013, quando decidiu entrar no mercado, a startup tinha pouco tempo para lançar suas operações. “Precisávamos começar a operar nosso produto de cartão de crédito em menos de um ano”, lembra Renan Capaverde, líder de infraestrutura do Nubank.
-        <br>
-        Capaverde explica que não havia tempo hábil para desenhar e dimensionar um datacenter próprio, adquirir equipamentos e implementá-los. Além disso, a opção de ir ao mercado com uma infraestrutura física convencional implicaria riscos de investimento. "Nosso desafio era lançar o primeiro produto (cartão de crédito) em menos de um ano e então escalar a infraestrutura à medida que a empresa fosse crescendo e ampliando o portfólio", recorda. "Sabíamos que íamos crescer, mas não sabíamos exatamente quanto, nem com qual velocidade isso aconteceria. Precisávamos de uma alternativa que nos tirasse o risco do investimento para lançamento do negócio, bem como a necessidade de realizar estudos para desenhar e dimensionar uma infraestrutura física", enumera.
-        <br>
-        O Nubank entendeu que a melhor opção seria apostar na infraestrutura e serviços em nuvem. “Este era o meio mais eficiente e economicamente viável de chegar ao mercado com o desempenho e capacidade que um banco digital demanda, no prazo que tínhamos.” A instituição então foi ao mercado analisar as alternativas disponíveis.
-
-        <p class="caseSubtitle">Solução</p>
-
-        <p>Inicialmente, a instituição contratou as ofertas de infraestrutura em cloud da Sennatech. Com o passar do tempo, no entanto, a parceria se ampliou, e os diferentes serviços desenvolvidos pela Sennatech passaram a suportar a estratégia do Nubank.
-        <br>
-        Atualmente, além da infraestrutura em cloud, o Nubank utiliza serviços para automação de sua infraestrutura e gestão de recursos computacionais. Para garantir a segurança em seu ambiente, o Nubank conta com a proteção contra ataques do tipo DDoS.
-        </p>
-
-      </div>
     </div>
-    <div class="socialMedia">
-      <p>Compartilhar</p>
-      <a href="" class="me-5 text-reset">
-        <i class="bi bi-linkedin"></i>
-      </a>
-      <a href="" class="me-5 text-reset">
-        <i class="bi bi-instagram"></i>
-      </a>
-      <a href="" class="me-5 text-reset">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="bi bi-whatsapp"></i>
+    <div class="col-lg-3 col-xs-12">
+      <h5 class="vaga__relacionados">Vagas Relacionadas</h5>
+      <div class="card cardVaga mb-3">
+        <div class="card-body">
+          <p class="card-partner">brasil - remoto</p>
+          <h3 class="card-title">Front End CSS Developer</h3>
+          <a href="" class="card-link">
+            <p class="card-text mt-5">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="card cardVaga mb-3">
+        <div class="card-body">
+          <p class="card-partner">brasil - remoto</p>
+          <h3 class="card-title">Front End CSS Developer</h3>
+          <a href="">
+            <p class="card-text mt-5">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+            </p>
+          </a>
+        </div>
+      </div>
+      <div class="card cardVaga mb-3">
+        <div class="card-body">
+          <p class="card-partner">brasil - remoto</p>
+          <h3 class="card-title">Front End CSS Developer</h3>
+          <a href="">
+            <p class="card-text mt-5">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
+            </p>
+          </a>
+        </div>
+      </div>
+      <a href="">
+        <p class="vaga__otherVaga">Ver outras Vagas</p>
       </a>
     </div>
   </div>
-  <div class="col-5">
-    <div class="card cardService">
-      <div class="card-body">
-        <p>2023 | Parceiro: Wib</p>
-        <h3 class="card-title">Case de Sucesso da Vivo</h3>
-        <a href="">
-          <p class="card-text">Ler Case <i class="bi bi-arrow-up-right"></i>
-          </p>
-        </a>
-      </div>
-    </div>
-    <div class="card cardService">
-      <div class="card-body">
-        <p>2023 | Parceiro: Wib</p>
-        <h3 class="card-title">Case de Sucesso da Ifood</h3>
-        <a href="">
-          <p class="card-text">Ler Case <i class="bi bi-arrow-up-right"></i>
-          </p>
-        </a>
-      </div>
-    </div>
-    <div class="card cardService">
-      <div class="card-body">
-        <p>2023 | Parceiro: Solvo</p>
-        <h3 class="card-title">Case de Sucesso da Alelo</h3>
-        <a href="">
-          <p class="card-text">Ler Case <i class="bi bi-arrow-up-right"></i>
-          </p>
-        </a>
-      </div>
-    </div>
-    <a href="">
-      <p>Ver outros Cases</p>
-    </a>
-  </div>
+
 </div>
 <app-footer></app-footer>
