--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" >
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -8,9 +8,42 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="../../../assets/images/banner.png" class="d-block w-100" alt="...">
+      <div class="position-absolute text-start top-50 start-25 translate-middle">
+        <div class="carousel__animation">
+          <h1 class="carousel__title">Be</h1>
+              <ul class="carousel__title">
+                <li>cloud</li>
+                <li>tech</li>
+                <li>ready</li>
+              </ul>
+        </div>
+        <h5 class="carousel__subTitle ">Expertise em soluções digitais que transformam negócios.</h5>
+        <div class="btnDiv mx-auto my-5">
+          <button class="btnDark">
+            <p class="btnText">Success Cases</p>
+          </button>
+        </div>
+      </div>
+      <div class="position-absolute text-start top-45 start-75 translate-middle">
+        <h5 class="carousel__parceiros">Parceiros</h5>
+        <div class="carousel__imgParceiros">
+          <img src="../../../../assets/images/solace_white.png" alt="">
+          <img src="../../../../assets/images/wib_white.png" alt="">
+          <img src="../../../../assets/images/solvo_white.png" alt="">
+        </div>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="../../../assets/images/banner_2.png" class="d-block w-100" alt="...">
+      <div class="position-absolute top-50 start-50 translate-middle">
+        <h1>Imagem</h1>
+        <h5 class="carousel__subTitle text-center mx-auto">Expertise em soluções digitais que transformam negócios.</h5>
+        <div class="btnDiv mx-auto my-5">
+          <button class="btnDark">
+            <p class="btnText">Acessar Case</p>
+          </button>
+        </div>
+      </div>
     </div>
     <app-menu></app-menu>
   </div>
