--- a/src/app/components/shared/carousel/carousel.component.scss
+++ b/src/app/components/shared/carousel/carousel.component.scss
@@ -1,5 +1,6 @@
 
-
+$sennatechColor: #001322;
+$sennatechColorAlt: #B6B6B6;
 
 .carousel-indicators [data-bs-target] {
     box-sizing: content-box;
@@ -68,4 +69,133 @@
   opacity: 0.5;
   transition: opacity 0.15s ease;
   height: 25px;
+}
+
+.position-absolute {
+  z-index: 1; /* Define a ordem de empilhamento do elemento */
+  color: white; /* Define a cor do texto */
+  text-align: center; /* Alinha o texto no centro */
+}
+
+.start-25{
+  left: 25% !important;
+}
+
+.start-75{
+  left: 75% !important;
+}
+
+.top-45{
+  top: 45% !important;
+}
+
+
+.btnDark{
+  height: 49px;
+  width: 49px;
+  border-radius: 40px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  border: $sennatechColor;
+  background-color: $sennatechColor;
+  transition: 0.5s ease;
+
+  &:hover:first-child {
+    width: 149px;
+    transition: 1s ease;
+  }
+  &:hover:last-child {
+    width: 140px;
+    transition: 1s ease;
+  }
+
+  .btnText{
+    width: 200px;
+    margin: 0 10px;
+    text-align: left;
+  }
+}
+
+.carousel{
+
+  &__animation{
+    width: 100%;
+    display: flex;
+    height: 145px;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  &__title{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 144px;
+    color: #6AF4FF;
+  }
+
+  &__subTitle{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 120%;
+    color: #FFFFFF;
+    width: 75%;
+  }
+
+  &__parceiros{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-align: center;
+  }
+
+  &__imgParceiros{
+    display: inline-flex;
+    width: 100%;
+    align-items: center;
+  }
+
+  ul{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 144px;
+    color: #FAFAFA;
+    list-style: none;
+    animation: trocar 7s infinite;
+  }
+
+  ul, h1{
+    margin: 0;
+  }
+}
+
+
+
+li{
+  color: #FAFAFA;
+}
+
+
+@keyframes trocar {
+  0%{margin-top: 0;}
+  20%{margin-top: 0;}
+
+  25%{margin-top: -145px;}
+  50%{margin-top: -145px;}
+
+  55%{margin-top: -290px;}
+  80%{margin-top: -290px;}
 }
