--- a/src/app/pages/carreira/carreira.component.scss
+++ b/src/app/pages/carreira/carreira.component.scss
@@ -18,6 +18,20 @@
     }
   }
 
+  &__filter{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+    text-transform: uppercase;
+    color: #001322;
+
+    span{
+      color: #B6B6B6;
+    }
+  }
+
   &__subTitle{
     font-family: 'Poppins';
     font-style: normal;
@@ -51,10 +65,18 @@
 
 .cardCarreira{
   padding: 20px 20px 20px 20px;
-  width: 19rem;
+
+  @media screen and (min-width:320px) {
+    width: 19rem;
+  }
+
+  @media screen and (min-width: 992px) {
+    width: 100%;
+  }
+
   border-radius: 0px;
   display: inline-block;
-  margin-right: 30px;
+  // margin-right: 30px;
   text-align: left;
 }
 
