--- a/src/app/pages/cases/cases.component.scss
+++ b/src/app/pages/cases/cases.component.scss
@@ -25,9 +25,7 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 21px;
-  /* identical to box height */
   text-transform: uppercase;
-  /* Azul Escuro Sennatech */
   color: #001322;
   span{
     font-family: 'Poppins';
@@ -35,10 +33,8 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 21px;
-    /* identical to box height */
-    text-decoration-line: underline;
+    // text-decoration-line: underline;
     text-transform: uppercase;
-    /* Cinza */
     color: #B6B6B6;
 
   }
@@ -53,9 +49,7 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 21px;
-    /* identical to box height */
     text-transform: uppercase;
-    /* Azul Escuro Sennatech */
     color: #001322;
     span{
       color: #B6B6B6;
