--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -134,7 +134,7 @@
 </div>
 <!-- /PARCEIROS -->
 <!-- CAROUSEL PARCEIROS TESTE -->
-
+<!--
 <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -196,7 +196,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
+</div> -->
 <!-- /CAROUSEL PARCEIROS TESTE -->
 
 
