--- a/src/app/pages/servicos/servicos.component.scss
+++ b/src/app/pages/servicos/servicos.component.scss
@@ -28,10 +28,16 @@
 
 .cardService{
   padding: 20px 20px 20px 20px;
-  width: 19rem;
+
+  @media screen and (min-width:320px) {
+    width: 19rem;
+  }
+  @media screen and (min-width: 992px) {
+    width: 100%;
+  }
   border-radius: 0px;
   display: inline-block;
-  margin-right: 30px;
+  // margin-right: 30px;
   text-align: left;
 }
 
